reworked alignement and css for search fix #38

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -20,7 +20,7 @@
 
 .form-horizontal .control-label {
     text-align: left;
-    padding: 5px 0 0;
+    padding: 7px 0 0;
 }
 
 #values_inputs-colors img {
@@ -33,6 +33,8 @@
 
 #form-search {
     display: table;
+    width: 100%;
+    padding-right: 4%;
 }
 
 #form-search .row {
@@ -60,5 +62,48 @@
 }
 
 #button_submit {
-    font-size: 18px;
+    font-size: 20px;
+    margin-top: 1%;
+    margin-right: 3%;
+}
+
+.form-control {
+    min-height: 34px;
+    height: auto;
+}
+
+#colors {
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 9px;
+}
+
+#colors input {
+    vertical-align: -3px;
+}
+
+#rarity input {
+    vertical-align: -2px;
+}
+
+#colors .col-md-4,
+#colors .col-sm-4,
+#rarity .col-md-6,
+#rarity .col-sm-6 {
+    padding: 0;
+}
+
+.slider.slider-horizontal {
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 6px;
+}
+
+.slider-handle {
+    background: #333 linear-gradient(to bottom, #333 0, #444 100%);
+}
+
+
+.form-group label {
+    padding-top: 7px;
 }
