--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -6,3 +6,16 @@ body {
     padding-right: 20%;
     padding-left: 20%;
 }
+
+.panel-primary>.panel-heading {
+    background-color: #333;
+}
+
+.panel-primary {
+    border-color: #333;
+}
+
+.btn-primary {
+    background-color: #333;
+    border-color: #333;
+}
